--- a/前端算法与数据结构.md
+++ b/前端算法与数据结构.md
@@ -55,19 +55,478 @@ print(ans)
 
 * 善用功能：使用leetcode的笔记（常复习）
 
-# 第2章 时间/空间复杂度
+## 1-4 如何回答算法面试问题？
 
-只会做题可不行，还得会分析时间复杂度和空间复杂度，快来做个追求极致的程序员吧！
+**注意题目中的条件**
 
-##  2-1 时间复杂度
+* 给定一个有序数组...
+* 有一些题目中的条件本质是按时：
+  * 设计一个O（nlogn）的算法
+  * 无需考虑额外的空间
+  * 数据规模大概是10000
+
+**当没有思路的时候**
+
+* 自己给自己几个简单的测试用例，试验一下
+
+* 不要忽视暴力解法。暴力解法通常是思考的起点。
+
+  <img src="前端算法与数据结构.assets/image-20210301111041038.png" alt="image-20210301111041038" style="zoom: 80%;" />
+
+**优化算法**
+
+* 遍历常见的算法思路
+* 遍历常见的数据结构
+* 空间和时间的交换（eg 使用哈希表）
+* 预处理信息（eg 对数据进行排序）
+* 在瓶颈处寻找答案：(eg `O(nlogn)+O(n^2)中的O(n^2),O(n^3)`)
+
+**实际编写问题**
+
+* 极端条件的判断
+  * 数组为空？字符串为空？数量为0？指针为NULL？
+* 代码规范：变量名
+* 代码要关注模块化和复用性
+
+**对于基本问题，白板编程**
+
+##  1-5 时间复杂度/空间复杂度 
 
 <img src="前端算法与数据结构.assets/image-20201221211227446.png" alt="image-20201221211227446" style="zoom:80%;" />
 
 <img src="前端算法与数据结构.assets/image-20201221211237676.png" alt="image-20201221211237676" style="zoom:80%;" />
 
-##   2-2 空间复杂度
-
 <img src="前端算法与数据结构.assets/image-20201221211344901.png" alt="image-20201221211344901" style="zoom:80%;" />
+
+# 第2章 数组
+
+## 2-1 数组操作
+
+**开头插入元素**
+
+* `newArr = [item,...arr]`
+* `newArr.unshift(item)`
+* `[item].concat(arr)`
+
+**末尾添加元素**
+
+* `arr.push(item)`
+* `arr.concat(item)`
+
+**删除最后一个元素**
+
+* `newArr = arr.slice(0,arr.length-1)`
+* `arr.pop()`
+
+**删除数组第一个元素**
+
+* `arr.splice(0,1)`
+* `arr.shift()`
+* `arr.slice(1)`
+
+**判断两个数组是否相等**：两个数组对象不能直接用 == 判断是否相等，可以使用
+
+* `arr.toString()`
+* `JSON.stringify(arr)`
+
+##   2-2 数组的各种遍历方式
+
+<img src="../../文档/[note]前端笔记/img/image-20201029220238851.png" alt="image-20201029220238851" style="zoom: 67%;" />
+
+* **forEach**
+
+  ```js
+  let arr = [1,2,3]
+  //foreach
+  arr.forEach(function(elem,index,array){
+    console.log(elem,index);
+  });
+  ```
+
+【注意】：foreach不支持continue和break
+
+* **reduce**
+
+  1. 数组求和
+
+     ```js
+     let arr = [1,2,3]
+     
+     let sum = arr.reduce(function(prev,cur,index,array){
+       return prev+cur;
+     },0)
+     console.log(sum);
+     ```
+
+  2. 求最大值
+
+     ```js
+     let arr = [1,2,3]
+     
+     let max = arr.reduce(function(prev,cur){
+       return Math.max(prev,cur)
+     },0)
+     console.log(max);
+     ```
+
+  3. 去重
+
+     ```js
+     let arr = [1,2,1,3]
+     
+     let newarr = arr.reduce(function(prev,cur){
+       prev.indexOf(cur) == -1 && prev.push(cur);
+       return prev
+     },[])
+     console.log(newarr);//[1, 2, 3]
+     ```
+
+  4. 统计词频
+
+     ```js
+     function count(str) {
+       //去除空白字符处理
+       str = str.replace(/\s*/g,'');
+       //统计词频
+       let arr = [...str];
+       let res = arr.reduce(function(prev,cur){
+         prev[cur] ? prev[cur]++ : prev[cur]=1;
+         return prev;
+       },{})
+       return res;
+     }
+     var result = count('hello world');
+     console.log(result);//{ h: 1, e: 1, l: 3, o: 2, w: 1, r: 1, d: 1 }
+     ```
+
+
+<img src="../../文档/[note]前端笔记/img/image-20201030135947240.png" alt="image-20201030135947240" style="zoom:67%;" />
+
+**find**
+
+```js
+let arr = [1,2,2,3]
+
+let res = arr.find(function(value){
+  return value ==2;
+})
+console.log(res);//2
+```
+
+**findIndex**
+
+```js
+let arr = [1,2,2,3]
+let res = arr.findIndex(function(value){
+  return value ==2;
+})
+console.log(res);//1
+```
+
+**for of**
+
+```js
+let arr = [1,2,2,3]
+
+for(let item of arr){
+  console.log(item);
+}
+
+for(let item of arr.values()){
+  console.log(item);
+}
+
+for(let item of arr.keys()){
+  console.log(item);
+}
+
+for(let [index,item] of arr.entries()){
+  console.log(index,item);
+}
+```
+
+##  2-3 数组的扩展
+
+<img src="../../文档/[note]前端笔记/img/image-20201030140353849.png" alt="image-20201030140353849" style="zoom: 67%;" />
+
+**类数组/伪数组**
+
+```js
+let divs3 = document.querySelectorAll('.xx');
+console.log(divs3);//NodeList [] 这就是一个伪数组
+console.log(divs3 instanceof Array);//false
+//ES5
+let arr = Array.prototype.slice(divs3)//把伪数组转化成数组
+console.log(arr);//[]
+arr.push(123);
+console.log(arr);//[123]
+```
+
+**Array.from()**
+
+```js
+//ES6
+let arrayLike = {
+  0:'es6',
+  1:'es7',
+  2:'es8',
+  length:3
+}
+let arr = Array.from(arrayLike);//把伪数组转化成数组
+console.log(arr);//["es6", "es7", "es8"]
+```
+
+**Array.of**
+
+```js
+let arr = Array.of(1,2);
+console.log(arr);//[1, 2]
+```
+
+**copyWithin**
+
+```js
+let arr = [1,2,3,4,5];
+console.log(arr.copyWithin(1,3));//[1, 4, 5, 4, 5]
+```
+
+**fill**
+
+```js
+let arr = [1,2,3,4,5];
+arr.fill('imooc',1,3)//从1替换到3（不包含3
+console.log(arr);// [1, "imooc", "imooc", 4, 5]
+
+arr.fill(0);
+console.log(arr);//[0, 0, 0, 0, 0]
+```
+
+**includes()**
+
+```js
+let arr = [1,2,3,NaN];
+console.log(arr.includes(2));//true
+console.log(arr.includes(NaN));//true
+```
+
+【注意】：indexof返回数组索引，检测不出来NaN，includes可以检测NaN
+
+## 2-4 简单问题的优化思路 
+
+### LeetCode 283  移动零
+
+![image-20210302133959070](前端算法与数据结构.assets/image-20210302133959070.png)
+
+**思路1：使用辅助数组存放非零元素**
+
+把nums中非零元素找到按顺序放回nums，nums其他元素置0
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
+ */
+var moveZeroes = function(nums) {
+
+    const nonZeroElements = [];
+    //将nums中所有非零元素放入nonZeroElements中
+    nums.forEach((item)=>{
+        if(item!==0){
+            nonZeroElements.push(item);
+        }
+    })
+    //将nonZeroElements中所有元素一次放入到nums开始的位置
+    var nonZeroLength = nonZeroElements.length;
+    for(let i=0;i<nonZeroLength;i++){
+        nums[i] = nonZeroElements[i];
+    }
+    //将nums剩余位置放0
+    for(let i=nonZeroLength;i<nums.length;i++){
+        nums[i] = 0;
+    }
+
+    return nums;
+};
+```
+
+**思路2：不使用辅助空间，原地移动**
+
+<img src="前端算法与数据结构.assets/image-20210302134333239.png" alt="image-20210302134333239" style="zoom: 33%;" />
+
+设置指针k，遍历数组，将非零元素放在k指向的位置，之后k+1.此时从[0..k）就存放的是所有非零元素，(k....nums.length-1]就全部是0元素。
+
+```js
+var moveZeroes = function(nums) {
+
+    let k = 0 ;//nums中,[0...k)的元素均为非零元素
+
+    //遍历到第i个元素后，保证[0...i]中所有非0元素都按照顺序排列在[0...k)中
+    for(let i=0;i<nums.length;i++){
+        if(nums[i]!=0){
+            nums[k++] = nums[i];
+        }
+    }
+    //将nums剩余的位置放置为0
+    for(let i=k;i<nums.length;i++){
+        nums[i] = 0;
+    }
+    return nums;
+};
+```
+
+**思路3：在2上的优化，将非零元素和零元素交换**
+
+```js
+var swap = function(nums,i,j){
+    let temp = nums[i];
+    nums[i] = nums[j];
+    nums[j] = temp;
+}
+
+var moveZeroes = function(nums) {
+
+    let k = 0 ;//nums中,[0...k)的元素均为非零元素
+
+    //遍历到第i个元素后，保证[0...i]中所有非0元素都按照顺序排列在[0...k)中
+    //同时，[k...i]为0
+    for(let i=0;i<nums.length;i++){
+        if(nums[i]!=0){
+            swap(nums,k,i);
+            k++;
+        }
+    }
+    return nums;
+};
+```
+
+### LeeCode 27 移除元素
+
+https://leetcode-cn.com/problems/remove-element/submissions/
+
+![image-20210302142047346](前端算法与数据结构.assets/image-20210302142047346.png)
+
+![image-20210302135436151](前端算法与数据结构.assets/image-20210302135436151.png)
+
+**思路1：双指针**
+
+设置指针k，原地移动不等于val的元素
+
+时间：O(n) 空间：O(1)
+
+```js
+var swap = function(nums,i,j){
+    let temp = nums[i];
+    nums[i] = nums[j];
+    nums[j] = temp;
+}
+
+var removeElement = function(nums, val) {
+    let k = 0 ;//nums中,[0...k)的元素均为非val元素
+
+    //遍历到第i个元素后，保证[0...i]中所有非val元素都按照顺序排列在[0...k)中
+    //同时，[k...i]为val
+    for(let i=0;i<nums.length;i++){
+        if(nums[i]!==val){
+            nums[k] = nums[i];
+            k++;
+        }
+    }
+    return k;
+};
+```
+
+**思路2：双指针—— 当要删除的元素很少时**
+
+现在考虑数组包含很少的要删除的元素的情况。例如，`num=[1，2，3，5，4]，Val=4`之前的算法会对前四个元素做不必要的复制操作。另一个例子是 `num=[4，1，2，3，5]，Val=4`似乎没有必要将 `[1，2，3，5]` 这几个元素左移一步，因为问题描述中提到元素的顺序可以更改。
+
+时间：O(n) 空间：O（1）
+
+```js
+var removeElement = function(nums, val) {
+
+    let newl = nums.length;
+    let i = 0;
+    while(i<newl){
+        if(nums[i] === val){
+            newl--;
+            nums[i] = nums[newl];
+        }else{
+            i++;
+        }
+    }
+    return newl;
+};
+```
+
+
+
+### LeetCode 26 [删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+
+https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/solution/shuang-zhi-zhen-shan-chu-zhong-fu-xiang-dai-you-hu/
+
+![image-20210302142205453](前端算法与数据结构.assets/image-20210302142205453.png)
+
+**思路：双指针**
+
+首先注意数组是有序的，那么重复的元素一定会相邻。要求删除重复元素，实际上就是将不重复的元素移到数组的左侧。
+
+考虑用 2 个指针，一个在前记作 p，一个在后记作 q，算法流程如下：
+
+1. 比较 p 和 q 位置的元素是否相等。
+   * 如果相等，q 后移 1 位
+   * 如果不相等，将 q 位置的元素复制到 p+1 位置上，p 后移一位，q 后移 1 位
+
+重复上述过程，直到 q 等于数组长度。 
+
+返回 p + 1，即为新数组长度。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var removeDuplicates = function(nums) {
+    if(nums == null || nums.length == 0 ) return 0;
+    let p = 0;
+    let q = 1;
+    while(q<nums.length){
+        if(nums[p]!== nums[q]){
+            nums[p+1] = nums[q];
+            p++;
+        }
+        q++;
+    }
+    return p+1;
+};
+```
+
+### Leetcode80 删除数组中的重复项 ||
+
+https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array-ii/
+
+![image-20210302152215415](前端算法与数据结构.assets/image-20210302152215415.png)
+
+## 2-5 三路快排partition思路的应用
+
+### Leetcode sortColor
+
+
+
+## 2-6 对撞指针
+
+### Leetcode Two sum
+
+
+
+## 2-7 滑动窗口
+
+### Leetcode 最小子串
+
+
+
+## 2-8 在滑动窗口中作记录
+
+
 
 # 第3章 栈
 
@@ -103,8 +562,6 @@ const item1 = stack.pop();
 <img src="前端算法与数据结构.assets/image-20201221213811571.png" alt="image-20201221213811571" style="zoom: 80%;" />
 
 <img src="前端算法与数据结构.assets/image-20201221214016030.png" alt="image-20201221214016030" style="zoom:80%;" />
-
-
 
 ##   3-3 LeetCode：20.有效的括号 
 
@@ -355,6 +812,130 @@ MinStack.prototype.min = function() {
 
 <img src="前端算法与数据结构.assets/image-20210224233109060.png" alt="image-20210224233109060" style="zoom:50%;" />
 
+## 3-9 表达式计算
+
+### LeetCode：224.基本计算器
+
+> 实现一个基本的计算器来计算一个简单的字符串表达式 s 的值。
+>
+> 示例 1：
+>
+> 输入：s = "1 + 1"
+> 输出：2
+> 示例 2：
+>
+> 输入：s = " 2-1 + 2 "
+> 输出：3
+> 示例 3：
+>
+> 输入：s = "(1+(4+5+2)-3)+(6+8)"
+> 输出：23
+>
+> https://leetcode-cn.com/problems/basic-calculator/solution/ji-ben-ji-suan-qi-by-leetcode/
+
+**思路1：使用eval直接计算表达式**
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var calculate = function(s) {
+    return eval(s);
+};
+```
+
+**思路2**: 逆向读取字符串并使用栈
+
+* 逆序读取代字符串，遇到右括号 ) 表示须要暂存接下来的数字和符号，遇到左括号 ( 表示可以结算在遇到 离当前最近 的右括号 ) 之间缓存的数值，由于是逆序读取，这个过程符合 后进先出 的规律，因此缓存的数据结构须要使用「栈」；
+* 如果参与计算的数由多个字符组成，例如：字符串 "123"，表示数值 123，逆序读取的时候可以这样转换：3 + 20 + 100，可以设置一个变量 n ，从 1 开始，接下来变为 10、100，这样 3 + 20 + 100 = 3 * 1 + 2 * 10 + 1 * 100；
+* 如果遇到的字符不是数字而是「运算符或者括号」，先把数字存入栈，然后
+  * 如果是运算符，+ 存入 1，- 存入 -1；
+  * 如果是括号，左括号结算（因为当前括号里的内容可以计算出来，计算完成以后成为另一个括号里的数参与计算），右括号缓存起来
+* 最后栈中还有元素，还应该做一次计算。  
+
+```js
+function evaluteExpr(stack) {
+    //console.log("before calculte:",stack)
+    var res = 0;
+    if (stack.length) {
+        res = stack.pop();
+    }
+    while (stack.length >= 1 && stack[stack.length-1] != ')') {
+      let num1 = stack.pop();
+      let num2 = stack.pop();
+      res += num1*num2;
+    }
+    //console.log("after calculte:",res)
+    return res;
+}
+var calculate = function (s) {
+    //针对特殊用例 -2 +1
+    s = s.trim();
+    if (s.charAt(0) == '-') {
+        s = "0" + s;
+    }
+    //只使用一个栈（保存操作数和操作符）
+    const stack = [];
+    //累计的操作数
+    var operand = 0;
+    //累计的位数，转换123，从右向左，底数从1开始，依次为10、100、....
+    var n = 1;
+    //从后往前
+    for (let i = s.length - 1; i >= 0; i--) {
+        var ch = s[i];
+        //console.log("stack:",stack)
+        if(ch === ' '){
+            continue;
+        }
+        if (ch>='0' && ch<='9') {
+            //操作数累计
+            operand = n * (ch - '0') + operand;
+            n *= 10;
+            continue;
+        }
+        if (n !==  1) {
+            //将操作数保存到栈，并且初始化operand和n
+            stack.push(operand);
+            operand = 0;
+            n = 1;
+        }
+        if (ch === '+') {
+            stack.push(1);
+            continue;
+        }
+        if (ch === '-') {
+            stack.push(-1);
+            continue;
+        }
+        if (ch === '(') {
+            var res = evaluteExpr(stack);
+            stack.pop();
+            stack.push(res);
+        } else {
+            stack.push(')');
+        }
+    }
+
+    if (n != 1) {
+        stack.push(operand);
+    }
+    return evaluteExpr(stack);
+};
+```
+
+## 3-10 栈的出战顺序
+
+> 题目描述：给定一个正整数N代表火车数量，0<N<10，接下来输入火车入站的序列，一共N辆火车，每辆火车以数字1-9编号。要求以字典序排序输出火车出站的序列号。
+> 例如输入：3 1 2 3 
+> 输出例子:1 2 3   1 3 2   2 1 3   2 3 1  3 2 1
+>
+> https://www.nowcoder.com/practice/97ba57c35e9f4749826dc3befaeae109?tpId=37&tqId=21300&rp=1&ru=%2Fta%2Fhuawei&qru=%2Fta%2Fhuawei%2Fquestion-ranking&tab=answerKey
+
+**思路：对**
+
+
+
 # 第4章 队列
 
 ## 4-1 队列简介 
@@ -374,19 +955,19 @@ const item1 = queue.shift();
 
 ## 4-2 什么场景用队列 
 
-<img src="前端算法与数据结构.assets/image-20201225101556485.png" alt="image-20201225101556485" style="zoom:67%;" />
+<img src="前端算法与数据结构.assets/image-20201225101556485.png" alt="image-20201225101556485" style="zoom: 50%;" />
 
-![image-20201225101732458](前端算法与数据结构.assets/image-20201225101732458.png)
+<img src="前端算法与数据结构.assets/image-20201225101732458.png" alt="image-20201225101732458" style="zoom:50%;" />
 
-![image-20201225101916611](前端算法与数据结构.assets/image-20201225101916611.png)
+<img src="前端算法与数据结构.assets/image-20201225101916611.png" alt="image-20201225101916611" style="zoom:50%;" />
 
 ## 4-3 LeetCode：933. 最近的请求次数
 
 ![image-20201225102809776](前端算法与数据结构.assets/image-20201225102809776.png)
 
-<img src="前端算法与数据结构.assets/image-20201225102254215.png" alt="image-20201225102254215" style="zoom:80%;" />
+<img src="前端算法与数据结构.assets/image-20201225102254215.png" alt="image-20201225102254215" style="zoom: 50%;" />
 
-<img src="前端算法与数据结构.assets/image-20201225102308389.png" alt="image-20201225102308389" style="zoom:80%;" />
+<img src="前端算法与数据结构.assets/image-20201225102308389.png" alt="image-20201225102308389" style="zoom: 50%;" />
 
 ```js
 var RecentCounter = function() {
@@ -414,9 +995,9 @@ RecentCounter.prototype.ping = function(t) {
 
 ## 4-4 前端与队列：JS 异步中的任务队列 
 
-![image-20201225102932241](前端算法与数据结构.assets/image-20201225102932241.png)
+<img src="前端算法与数据结构.assets/image-20201225102932241.png" alt="image-20201225102932241" style="zoom: 50%;" />
 
-![image-20201225102941974](前端算法与数据结构.assets/image-20201225102941974.png)
+<img src="前端算法与数据结构.assets/image-20201225102941974.png" alt="image-20201225102941974" style="zoom:67%;" />
 
 
 
@@ -476,7 +1057,7 @@ console.log(queue.isEmpty())  // true
 
 ## 4-6 双端队列
 
-### 题目2:滑动窗口的最大值
+### 题目1:滑动窗口的最大值
 
 https://leetcode-cn.com/problems/hua-dong-chuang-kou-de-zui-da-zhi-lcof/
 
