--- a/自我介绍等通用问题.md
+++ b/自我介绍等通用问题.md
@@ -323,7 +323,15 @@ web服务客户端软件。
 
 ## 设计架构
 
+# 反问环节
 
+准备好合适的问题问面试官
+
+* 整个小组的大概运行模式是怎样的？
+* 整个项目的后续规划是如何的？
+* 这个产品中的某个问题是如何解决的？
+* 为什么会选择某些技术？标准？
+* 我对某个技术很感兴趣，在你的小组中我会有怎样的机会深入这种技术？
 
 # 职业发展问题
 
@@ -422,4 +430,6 @@ C++程序设计，Java程序设计
 你理解的框架
 
 ##  个人的优缺点
+
+
 
